--- a/package.json
+++ b/package.json
@@ -29,5 +29,8 @@
     "hamlet-cli": "^0.6.0-pre.10",
     "hamlet-runtime": "^0.6.0-pre.21",
     "mocha": "^1.20.1"
+  },
+  "dependencies": {
+    "o_0": "^0.3.1"
   }
 }
